--- a/service/game-service/src/main/resources/application-dev.yml
+++ b/service/game-service/src/main/resources/application-dev.yml
@@ -2,14 +2,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 172.30.60.82:8848
   application:
     name: game-service
   thymeleaf:
     cache: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yzhtzee
+    url: jdbc:mysql://172.30.60.82:3306/yzhtzee
     username: root
     password: 123456
   flyway:
@@ -28,11 +28,11 @@ dubbo:
     id: game-service
   protocol:
     name: dubbo
-    port: 20881
+    port: -1
   scan:
     base-packages: com.simple.gameservice.service.impl
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://172.30.60.82
     check: false
   consumer:
     check: false
