--- a/service/user-service/src/main/resources/application-dev.yml
+++ b/service/user-service/src/main/resources/application-dev.yml
@@ -2,14 +2,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 172.30.60.82:8848
   application:
     name: user-service
   thymeleaf:
     cache: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yzhtzee
+    url: jdbc:mysql://172.30.60.82:3306/yzhtzee
     username: root
     password: 123456
   flyway:
@@ -32,7 +32,7 @@ dubbo:
   scan:
     base-packages: com.simple.userservice.service.impl
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://172.30.60.82
     check: false
   consumer:
     check: false
