--- a/speed-boot-dice/src/main/resources/application-dev.yml
+++ b/speed-boot-dice/src/main/resources/application-dev.yml
@@ -1,5 +1,6 @@
 game-frame:
   scan: com.simple.speedbootdice
+  game-id: 1
 
 #websocket:
 #  url: https://localhost/speedBoot
@@ -8,7 +9,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 172.30.60.82:8848
+        server-addr: localhost:8848
   application:
     name: speed-boot
   main:
@@ -16,14 +17,18 @@ spring:
 
 dubbo:
   application:
-    id: speed-boot
+    name: speed-boot
   protocol:
     name: dubbo
     port: -1
   registry:
-    address: spring-cloud://172.30.60.82
+    address: spring-cloud://localhost
     check: false
+  scan:
+    base-packages: com.simple.gameframe.service.impl
   consumer:
     check: false
+    timeout: 60000
+    retries: 0
   cloud:
-    subscribed-services: speed-boot
+    subscribed-services: game-service
