--- a/service/user-service/pom.xml
+++ b/service/user-service/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
