--- a/speed-boot-dice/src/main/resources/application-dev.yml
+++ b/speed-boot-dice/src/main/resources/application-dev.yml
@@ -1,6 +1,7 @@
 game-frame:
   scan: com.simple.speedbootdice
   game-id: 1
+  enable-link-logic: true
 
 #websocket:
 #  url: https://localhost/speedBoot
