--- a/service/game-service/src/main/resources/application-dev.yml
+++ b/service/game-service/src/main/resources/application-dev.yml
@@ -2,12 +2,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: nacos:8848
   application:
     name: game-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yzhtzee
+    url: jdbc:mysql://mysql:3306/yzhtzee
     username: root
     password: 123456
   flyway:
@@ -30,7 +30,7 @@ dubbo:
   scan:
     base-packages: com.simple.gameservice.service.impl
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://nacos
     check: false
   consumer:
     timeout: 60000
