--- a/speed-boot-dice/pom.xml
+++ b/speed-boot-dice/pom.xml
@@ -47,6 +47,7 @@
             <groupId>com.simple</groupId>
             <artifactId>game-frame</artifactId>
             <version>1.0.1</version>
+            <scope></scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
