--- a/speed-boot-dice/src/main/resources/application-dev.yml
+++ b/speed-boot-dice/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: nacos:8848
   application:
     name: speed-boot
   main:
@@ -23,7 +23,7 @@ dubbo:
     name: dubbo
     port: -1
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://nacos
     check: false
   scan:
     base-packages: com.simple.gameframe.service.impl
