--- a/service/user-service/src/main/resources/application-prod.yml
+++ b/service/user-service/src/main/resources/application-prod.yml
@@ -1,16 +1,16 @@
 server:
-  port: 7083
+  port: 8082
 
 spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: nacos:8848
   application:
-    name: game-service-dev
+    name: user-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yzhtzee
+    url: jdbc:mysql://mysql:3306/yzhtzee
     username: root
     password: 123456
   flyway:
@@ -26,23 +26,23 @@ spring:
 
 dubbo:
   application:
-    name: game-service-dev
+    name: user-service
   protocol:
     name: dubbo
     port: -1
   scan:
-    base-packages: com.simple.gameservice.service.impl
+    base-packages: com.simple.userservice.service.impl
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://nacos
     check: false
   consumer:
+    check: false
     timeout: 60000
     retries: 0
-    check: false
-  cloud:
-    subscribed-services: speed-boot-dev
+#  cloud:
+#    subscribed-services: user-service
 
 logging:
   level:
-    com.simple.gameservice: trace
+    com.simple.userservice: trace
     org.springframework.messaging.simp: debug
