--- a/web/src/main/resources/application-prod.yml
+++ b/web/src/main/resources/application-prod.yml
@@ -1,31 +1,31 @@
 server:
-  port: 7081
+  port: 8081
 
 dubbo:
   application:
-    name: web-application-dev
+    name: web-application
   protocol:
     name: dubbo
     port: -1
   registry:
-    address: spring-cloud://localhost
+    address: spring-cloud://nacos
     check: false
   consumer:
     timeout: 60000
     retries: 0
     check: false
   cloud:
-    subscribed-services: user-service-dev,game-service-dev
+    subscribed-services: user-service,game-service
 
 spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: nacos:8848
   main:
     allow-circular-references: true
   thymeleaf:
     cache: false
 
 websocket:
-  url: http://localhost:7084/speedBoot
+  url: https://187f67320w.zicp.fun/speedBoot
