--- a/service/user-service/Dockerfile
+++ b/service/user-service/Dockerfile
@@ -20,4 +20,4 @@ EXPOSE 8082
 # 指定工作目录
 WORKDIR /app/
 # 配置容器启动后执行的命令
-CMD ["java","-Dserver.port=8082","-jar","user-service-1.0.0.jar"]
+CMD ["java","-Dserver.port=8082","-Dspring.profiles.active=prod","-jar","user-service-1.0.0.jar"]
