--- a/web/src/main/resources/application-prod.yml
+++ b/web/src/main/resources/application-prod.yml
@@ -28,4 +28,5 @@ spring:
     cache: false
 
 websocket:
+  #url: https://6211-115-231-52-50.jp.ngrok.io/speedBoot
   url: https://187f67320w.zicp.fun/speedBoot
