--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       - 8081:8081
     volumes:
       - ./web/target:/app
+      - ./img:/app/img
     depends_on:
       - nginx
       - user-service
